# marketwatch-scrapper

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
src/: __init__.py
src/marketwatch_scrapper/: __init__.py  marketwatch_scrapper.py
