[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marketwatch-scrapper"
version = "1.0.0"
description = "A Python package for scraping MarketWatch articles from the Wayback Machine"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Ariana Christodoulou", email = "ariana.chr@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "pandas>=1.3.0",
    "newspaper3k>=0.2.8",
    "lxml[html_clean]>=4.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
]

[project.urls]
Homepage = "https://github.com/ariana-ch/marketwatch-scrapper"
Repository = "https://github.com/ariana-ch/marketwatch-scrapper"
Issues = "https://github.com/ariana-ch/marketwatch-scrapper/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src" 